# ITMO

./: README.md
FPIn/Algoritms2/: Algoritms.xml
FPIn/Algoritms2/PythonScripts/: lab1.1.py  lab1.7.py  lab2.4.py  lab3.2.py  lab4.5.py
FPIn/C#/lab1/: README.md
FPIn/DataBase/: ПиРБД ЛР1.key
FPIn/DemoBackendProject/: HELP.md  pom.xml
FPIn/DevOps/: README.md  test.md
FPIn/DevOps/Clouds/: Mapping Rules AWS team 4.csv  README.md
FPIn/DevOps/ЛР2/: Dockerfile  README.md
FPIn/MLproject/: README.md  requirements.txt  results.csv  run.py
FPIn/ProgrammingPython/lab4/: lab4.py  (+1 more)
FPIn/Test/: test.http
ИС/Алгоритмы и структуры данных/: Задачи.docx  поиск в массиве и сортировка.docx
ПИиКТ/Inform/: 2024_Шаблон аннотации (MS Office).doc  doc.txt
ПИиКТ/ОПД/: Методичка по Б-ЭВМ и Unix.docx
ТПП/Аппаратное обеспечение вычислительных систем/: README.md
ТПП/Программирование на C++/lab2/ITMO lab2/: CMakeLists.txt  Scenario.cpp  Scenario.h  globals.cpp  globals.h  main.cpp
ТПП/Программирование на C++/lab2/ITMO lab2/activity/: Activity.cpp  Activity.h  First_place_person_doing.cpp  First_place_person_doing.h
ТПП/Программирование на C++/lab2/ITMO lab2/object/: ConsoleColor.cpp  ConsoleColor.h  MemoryMonitor.cpp  MemoryMonitor.h
ТПП/Программирование на C++/lab2/ITMO lab2/person/: IChoiceAction.h  Person.cpp  Person.h  Person_begin.cpp  Person_begin.h  Person_choice.cpp  Person_choice.h  Person_choice_failed.cpp  Person_choice_failed.h  Person_choice_win_1.cpp  Person_choice_win_1.h  Person_choice_win_2.cpp  Person_choice_win_2.h  Scenario_person.cpp  Scenario_person.h
(+284 files in other folders)
